feat(fulfillment): enrich Order/Shipment actors, fix event + retry consistency
- Order.createdBy and Shipment.dispatchedBy now resolve to UserSummaryResponse
- OrderService: cancel()/generateFulfillmentRequest() now publish
  WarehouseEvents (previously only create() did)
- bounded retry loops for order number and carrier tracking number
  generation, replacing unbounded recursion / unchecked collision risk