@@ -14,6 +14,8 @@ import com.nexuswms.fulfillment.entity.*;
 import com.nexuswms.fulfillment.repository.*;
 import com.nexuswms.inventory.dto.response.SkuResponse;
 import com.nexuswms.inventory.service.SkuService;
+import com.nexuswms.user.dto.response.UserSummaryResponse;
+import com.nexuswms.user.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -23,23 +25,40 @@ import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
+/**
+ * Service responsible for order lifecycle management: creation, cancellation,
+ * and fulfillment-request generation.
+ *
+ * <p>Order lifecycle changes are recorded twice, for two different purposes:
+ * an immutable {@link OrderEvent} written to MongoDB (audit trail), and a
+ * {@link WarehouseEvent} published to Redis pub/sub (live dashboard feed).
+ * Every status-changing action publishes both — the dashboard should always
+ * reflect the same lifecycle the audit trail records.</p>
+ */
 @Service
 @RequiredArgsConstructor
 public class OrderService {
+
+    /** Maximum attempts to generate a unique order number before giving up. */
+    private static final int MAX_ORDER_NUMBER_ATTEMPTS = 10;
 
     private final OrderRepository orderRepository;
     private final OrderLineRepository orderLineRepository;
     private final FulfillmentRequestRepository fulfillmentRequestRepository;
     private final SkuService skuService;
-    private final WarehouseEventPublisher eventPublisher; 
+    private final UserService userService;
+    private final WarehouseEventPublisher eventPublisher;
     private final OrderEventRepository orderEventRepository;
+
     /* ----- Create Order ----- */
+
     /**
      * Creates a new order with its lines.
      * Order number is auto-generated in format ORD-YYYYMMDD-XXXXX.
      * All SKU IDs in the lines are validated via SkuService before persisting.
      *
-     * @param request the order creation payload
+     * @param request   the order creation payload
+     * @param createdBy the UUID of the manager/admin creating the order
      * @return the persisted order as a response DTO
      */
     @Transactional
@@ -54,7 +73,7 @@ public class OrderService {
         order.setNotes(request.notes());
         order.setPriority(parsePriority(request.priority()));
         order.setStatus(OrderStatus.RECEIVED);
-        order=orderRepository.save(order);
+        order = orderRepository.save(order);
 
         Set<UUID> skuIds = request.lines().stream()
                 .map(l -> Objects.requireNonNull(l.skuId()))
@@ -76,45 +95,60 @@ public class OrderService {
         }
         orderLineRepository.saveAll(lines);
 
-        eventPublisher.publish(WarehouseEvent.of(
-            "ORDER_CREATED",
-            order .getId().toString(),
-            order .getStatus().name(),
-            createdBy.toString(),
-            "OMS"
-        ));
-        orderEventRepository.save(new OrderEvent(
-            order.getId().toString(), order.getOrderNumber(),
-            "ORDER_CREATED", order.getStatus().name(), createdBy.toString()
-        ));
-        return enrichAndConvertToResponse(order, lines, skuMap);
+        recordLifecycleEvent(order, "ORDER_CREATED", createdBy, "OMS");
+
+        UserSummaryResponse createdByUser = userService.getUserSummaries(Set.of(createdBy))
+                .get(createdBy);
+
+        return enrichAndConvertToResponse(order, lines, skuMap, createdByUser);
     }
 
     /* ----- Get All Orders ----- */
+
     /**
      * Returns all orders in the system.
-     * Optionally filterable by status in future iterations.
+     * Batch-fetches associated OrderLines, SKU metadata, and creator user
+     * summaries to avoid N+1 query overhead.
      *
      * @return list of all orders as response DTOs
      */
     @Transactional(readOnly = true)
     public List<OrderResponse> getAll() {
         List<Order> orders = orderRepository.findAll();
+        if (orders.isEmpty()) return Collections.emptyList();
+
+        List<UUID> orderIds = orders.stream()
+                .map(order -> order.getId())
+                .toList();
+
+        List<OrderLine> allLines = orderLineRepository.findByOrder_IdIn(orderIds);
+        Map<UUID, List<OrderLine>> linesByOrderId = allLines.stream()
+                .collect(Collectors.groupingBy(line -> line.getOrder().getId()));
+
+        Set<UUID> allSkuIds = allLines.stream()
+                .map(orderLine -> orderLine.getSkuId())
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+        Map<UUID, SkuResponse> skuMap = allSkuIds.isEmpty()
+                ? Collections.emptyMap()
+                : skuService.getSkuResponseMapByIds(allSkuIds);
+
+        Set<UUID> creatorIds = orders.stream()
+                .map(order -> order.getCreatedBy())
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+        Map<UUID, UserSummaryResponse> userMap = userService.getUserSummaries(creatorIds);
+
         return orders.stream()
                 .map(order -> {
-                    List<OrderLine> lines = orderLineRepository.findByOrder_Id(order.getId());
-                    Set<UUID> skuIds = lines.stream()
-                            .map(l -> Objects.requireNonNull(l.getSkuId()))
-                            .collect(Collectors.toSet());
-                    Map<UUID, SkuResponse> skuMap = skuIds.isEmpty()
-                            ? Collections.emptyMap()
-                            : skuService.getSkuResponseMapByIds(skuIds);
-                    return enrichAndConvertToResponse(order, lines, skuMap);
+                    List<OrderLine> lines = linesByOrderId.getOrDefault(order.getId(), Collections.emptyList());
+                    return enrichAndConvertToResponse(order, lines, skuMap, userMap.get(order.getCreatedBy()));
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /* ----- Get Order By ID ----- */
+
     /**
      * Returns a single order by its UUID.
      *
@@ -124,32 +158,30 @@ public class OrderService {
      */
     @Transactional(readOnly = true)
     public OrderResponse getById(UUID id) {
-        Order order = orderRepository.findById(id)
-                                     .orElseThrow(() -> new ResourceNotFoundException("Order not found with id: " + id));
+        Order order = findOrderOrThrow(id);
         List<OrderLine> lines = orderLineRepository.findByOrder_Id(id);
-        Set<UUID> skuIds = lines.stream()
-                .map(l -> Objects.requireNonNull(l.getSkuId()))
-                .collect(Collectors.toSet());
-        Map<UUID, SkuResponse> skuMap = skuIds.isEmpty()
-                ? Collections.emptyMap()
-                : skuService.getSkuResponseMapByIds(skuIds);
-        return enrichAndConvertToResponse(order, lines, skuMap);
+
+        Map<UUID, SkuResponse> skuMap = fetchSkuMapForLines(lines);
+        UserSummaryResponse createdByUser = fetchCreatedByUser(order);
+
+        return enrichAndConvertToResponse(order, lines, skuMap, createdByUser);
     }
 
     /* ----- Cancel Order ----- */
+
     /**
      * Cancels an order. Only orders in RECEIVED or VALIDATED status can be cancelled.
      * Orders already in picking, packing, or dispatched cannot be cancelled.
      *
-     * @param id the order UUID
+     * @param id               the order UUID
+     * @param principalUserId  the UUID of the user performing the cancellation
      * @return the updated order as a response DTO
      * @throws ResourceNotFoundException if no order exists with the given ID
      * @throws IllegalArgumentException  if the order is not in a cancellable state
      */
     @Transactional
-    public OrderResponse cancel(UUID id,UUID principalUserId) {
-        Order order = orderRepository.findById(id)
-                                     .orElseThrow(() -> new ResourceNotFoundException("Order not found with id: " + id));
+    public OrderResponse cancel(UUID id, UUID principalUserId) {
+        Order order = findOrderOrThrow(id);
 
         if (order.getStatus() != OrderStatus.RECEIVED && order.getStatus() != OrderStatus.VALIDATED) {
             throw new IllegalArgumentException(
@@ -158,30 +190,26 @@ public class OrderService {
         }
 
         order.setStatus(OrderStatus.CANCELLED);
-        order=orderRepository.save(order);
-        orderEventRepository.save(new OrderEvent(
-            order.getId().toString(), order.getOrderNumber(),
-            "ORDER_CANCELLED", order.getStatus().name(), principalUserId.toString()
-        )); 
-        List<OrderLine> lines = orderLineRepository.findByOrder_Id(id);
-        Set<UUID> skuIds = lines.stream()
-                .map(l -> Objects.requireNonNull(l.getSkuId()))
-                .collect(Collectors.toSet());
-        Map<UUID, SkuResponse> skuMap = skuIds.isEmpty()
-                ? Collections.emptyMap()
-                : skuService.getSkuResponseMapByIds(skuIds);
+        order = orderRepository.save(order);
 
-      
-        return enrichAndConvertToResponse(order, lines, skuMap);
+        recordLifecycleEvent(order, "ORDER_CANCELLED", principalUserId, "OMS");
+
+        List<OrderLine> lines = orderLineRepository.findByOrder_Id(id);
+        Map<UUID, SkuResponse> skuMap = fetchSkuMapForLines(lines);
+        UserSummaryResponse createdByUser = fetchCreatedByUser(order);
+
+        return enrichAndConvertToResponse(order, lines, skuMap, createdByUser);
     }
 
     /* ----- Generate Fulfillment Request ----- */
+
     /**
      * Validates an order and generates a fulfillment request for it.
      * Transitions the order from RECEIVED to VALIDATED.
      * Only one fulfillment request can exist per order.
      *
-     * @param id the order UUID
+     * @param id          the order UUID
+     * @param generatedBy the UUID of the manager/admin generating the request
      * @return the created fulfillment request as a response DTO
      * @throws ResourceNotFoundException if no order exists with the given ID
      * @throws IllegalArgumentException  if the order is not in RECEIVED status
@@ -189,21 +217,20 @@ public class OrderService {
      */
     @Transactional
     public FulfillmentRequestResponse generateFulfillmentRequest(UUID id, UUID generatedBy) {
-        Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Order not found with id: " + id));
+        Order order = findOrderOrThrow(id);
+
         if (order.getStatus() != OrderStatus.RECEIVED) {
-            throw new IllegalArgumentException("Cannot generate fulfillment request for order in status: " + order.getStatus());
+            throw new IllegalArgumentException(
+                    "Cannot generate fulfillment request for order in status: " + order.getStatus());
         }
         fulfillmentRequestRepository.findByOrder_Id(id).ifPresent(fr -> {
             throw new ConflictException("Fulfillment request already exists for order: " + order.getOrderNumber());
         });
 
         order.setStatus(OrderStatus.VALIDATED);
-        Order savedOrder=orderRepository.save(order);
-        orderEventRepository.save(new OrderEvent(
-            savedOrder.getId().toString(), savedOrder.getOrderNumber(),
-            "ORDER_VALIDATED", savedOrder.getStatus().name(), generatedBy.toString()
-        ));
+        Order savedOrder = orderRepository.save(order);
+
+        recordLifecycleEvent(savedOrder, "ORDER_VALIDATED", generatedBy, "OMS");
 
         FulfillmentRequest fr = new FulfillmentRequest();
         fr.setOrder(savedOrder);
@@ -218,13 +245,63 @@ public class OrderService {
 
     /**
      * Fetches an order by ID or throws ResourceNotFoundException.
-     */ 
+     */
+    private Order findOrderOrThrow(UUID id) {
+        return orderRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Order not found with id: " + id));
+    }
 
     /**
-     * Builds an OrderResponse by enriching lines with SKU metadata from the provided map.
+     * Batch-fetches SKU metadata for a set of order lines. Returns an empty
+     * map (not a lookup exception) when there are no lines, since an order
+     * with zero lines is a valid — if unusual — state to render.
+     */
+    private Map<UUID, SkuResponse> fetchSkuMapForLines(List<OrderLine> lines) {
+        Set<UUID> skuIds = lines.stream()
+                .map(l -> Objects.requireNonNull(l.getSkuId()))
+                .collect(Collectors.toSet());
+        return skuIds.isEmpty()
+                ? Collections.emptyMap()
+                : skuService.getSkuResponseMapByIds(skuIds);
+    }
+
+    /**
+     * Resolves the user summary for an order's creator. Returns null if
+     * createdBy is null (legacy data) rather than throwing — enrichment
+     * failures should degrade gracefully, never block a read.
+     */
+    private UserSummaryResponse fetchCreatedByUser(Order order) {
+        if (order.getCreatedBy() == null) return null;
+        return userService.getUserSummaries(Set.of(order.getCreatedBy())).get(order.getCreatedBy());
+    }
+
+    /**
+     * Writes both halves of an order lifecycle event: the immutable MongoDB
+     * audit record and the live Redis pub/sub event for the dashboard.
+     * Every status-changing action calls this exactly once, so the two
+     * trails never drift apart.
+     */
+    private void recordLifecycleEvent(Order order, String eventType, UUID actorId, String zone) {
+        eventPublisher.publish(WarehouseEvent.of(
+                eventType,
+                order.getId().toString(),
+                order.getStatus().name(),
+                actorId.toString(),
+                zone
+        ));
+        orderEventRepository.save(new OrderEvent(
+                order.getId().toString(), order.getOrderNumber(),
+                eventType, order.getStatus().name(), actorId.toString()
+        ));
+    }
+
+    /**
+     * Builds an OrderResponse by enriching lines with SKU metadata and the
+     * order with its creator's user summary.
      */
     private OrderResponse enrichAndConvertToResponse(Order order, List<OrderLine> lines,
-                                                      Map<UUID, SkuResponse> skuMap) {
+                                                       Map<UUID, SkuResponse> skuMap,
+                                                       UserSummaryResponse createdByUser) {
         List<OrderLineResponse> lineResponses = lines.stream()
                 .map(line -> {
                     SkuResponse sku = skuMap.get(line.getSkuId());
@@ -232,18 +309,27 @@ public class OrderService {
                     String skuName = sku != null ? sku.name() : null;
                     return OrderLineResponse.from(line, skuCode, skuName);
                 })
-                .collect(Collectors.toList());
-        return OrderResponse.from(order, lineResponses);
+                .toList();
+        return OrderResponse.from(order, lineResponses, createdByUser);
     }
 
     /**
      * Generates a unique order number in the format ORD-YYYYMMDD-XXXXX.
+     * Retries on collision up to MAX_ORDER_NUMBER_ATTEMPTS times before
+     * failing loudly — a bounded loop rather than unbounded recursion, so a
+     * pathological collision run surfaces as a clear error instead of a
+     * stack overflow.
      */
     private String generateOrderNumber() {
         String datePart = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"));
-        String randomPart = String.format("%05d", new Random().nextInt(100000));
-        String candidate = "ORD-" + datePart + "-" + randomPart;
-        return orderRepository.existsByOrderNumber(candidate) ? generateOrderNumber() : candidate;
+        for (int attempt = 0; attempt < MAX_ORDER_NUMBER_ATTEMPTS; attempt++) {
+            String candidate = "ORD-" + datePart + "-" + String.format("%05d", new Random().nextInt(100000));
+            if (!orderRepository.existsByOrderNumber(candidate)) {
+                return candidate;
+            }
+        }
+        throw new IllegalStateException(
+                "Failed to generate a unique order number after " + MAX_ORDER_NUMBER_ATTEMPTS + " attempts");
     }
 
     /**
